--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -5,8 +5,7 @@
 
 .spa-shell-head, .spa-shell-head-logo, .spa-shell-head-acct,
 .spa-shell-head-search, .spa-shell-main, .spa-shell-main-nav,
-.spa-shell-main-content, .spa-shell-foot, .spa-shell-chat,
-.spa-shell-modal {
+.spa-shell-main-content, .spa-shell-foot, .spa-shell-modal {
   position : absolute;
 }
 .spa-shell-head {
@@ -64,27 +63,14 @@
   .spa-x-closed .spa-shell-main-content {
     left : 0;
   }
-
 .spa-shell-foot {
   bottom : 0;
   left   : 0;
   right  : 0;
   height : 40px;
 }
-.spa-shell-chat {
-  bottom     : 0;
-  right      : 0;
-  width      : 300px;
-  height     : 15px;
-  cursor: pointer;
-  background : red;
-  border-radius: 5px 0 0 0;
-  z-index    : 1;
-}
-.spa-shell-chat:hover {
-  background: #a00;
-}
 .spa-shell-modal {
+	display: none;
   margin-top    : -200px;
   margin-left   : -200px;
   top           : 50%;
